<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="horizontal"
    app:strokeWidth="0dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_cover_art"
        android:layout_width="100dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/view_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_cover_art"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/view_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/cv_cover_art"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cv_cover_art"
        app:layout_constraintTop_toTopOf="@+id/cv_cover_art">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_and_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_600"
            android:text="@string/title_and_year"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_time_and_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_and_genre"
            android:textColor="@color/black_50"
            app:layout_constraintTop_toBottomOf="@id/guideline" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_is_on_watchlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/on_my_watchlist"
            android:textAllCaps="true"
            android:textColor="@color/black_70"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>